# automated-play-annotations

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: __init__.py  calib.py  cli.py  config.py  deepsport_yolo.py  detectors.py  export_yolo.py  field.py  io_utils.py  pipeline.py  projection.py  tracking.py  train_yolo.py  val_yolo.py  visualize.py
cs1430_runner/: shim.py
keypoint_detection/: .gitignore  README.md  court_overlay_from_annotation.md  deepsport-dataset-info.md  pyproject.toml
keypoint_detection/.claude/: settings.json
keypoint_detection/scripts/: batch_court_overlay.py  court_geometry.py  court_keypoint_heatmap.py  court_line_detection.py  court_line_refinement.py  court_line_target_vis.py  court_overlay.py  deepsport_dataset.py  notebook.py
keypoint_detection/scripts/__marimo__/session/: notebook.py.json
keypoint_detection/src/court_detection/: augmentation.py  dataset.py  geometry.py  heatmap.py  lines.py  refinement.py
scripts/: slurm_train_deepsport.sh  train_deepsport_comprehensive.sh
