[project]
name = "cs1430-final-project"
version = "0.1.0"
description = "Automatic sports game annotation — player/ball detection, field reconstruction, and 2D play visualization"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Arib Syed" },
    { name = "Heewon Seo" },
    { name = "Oras Panagam" },
    { name = "Jeffrey Mu" },
]

dependencies = [
    # Core deep learning
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    # Detection
    "ultralytics>=8.0.0",          # YOLOv8
    "supervision>=0.20.0",         # tracking utilities that wrap YOLO
    # Computer vision / geometry
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pillow>=10.2.0",
    # Visualization
    "matplotlib>=3.8.0",
    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
