[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "court-detection"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/court_detection"]
